# scfs

./: apt-mirror.config  env.sh  scfs.dl  setup.sh
factgen/: Cargo.toml
factgen/src/: main.rs  parse.rs
