[package]
name = "factgen"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debpkg = "0.4"
tempfile = "3"
walkdir = "2"
rayon = "1.5"
log = "0.4"
env_logger = "0.8"
scfs = { path = "../scfs_ddlog/" }
differential_datalog = { path = "../scfs_ddlog/differential_datalog" }
indicatif = {version = "*", features = ["rayon"]}